--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+Flask==2.0.1
 asyncio==3.4.3
 spotipy==2.18.0
 shazamio==0.1.0
 pydub==0.25.1
 requests==2.26.0
-Pillow==8.3.1  #
+Pillow==8.3.1  
 python-dotenv==0.19.0
